<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Amazon Hackathon</string>
    <string name="or_message">..or..</string>
    <string name="scan_qr_message">Scan the QR image</string>
    <string name="connect_message">Connect your phone to your computer in one of the following ways </string>
    <string name="code_hint">Enter your code here..</string>
    <string name="content_hint">Enter the song you want to listen to..</string>
    <string name="type_message">Click the microphone and just say it!</string>
    <string name="button_OK">Go!</string>
    <string name="title_activity_send_code">SendCodeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btSpeak">Speak</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_voice_recognition">Voice Recognition</string>
    <string name="tvTextMatches">Text Matches</string>
    <string name="sNoOfMatches">No of Matches</string>
    <string name="etSearchHint">Speech hint here</string>

    <string-array name="saNoOfMatches">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string name="title_activity_search_music">SearchMusicActivity</string>

</resources>