<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".SearchMusicActivity" >
	<ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@drawable/logo"
        android:src="@drawable/logo" >
    </ImageView>
    
	<EditText
        android:id="@+id/enter_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/content_hint"
        android:layout_below="@id/logo"
        android:inputType="textNoSuggestions"
        android:textColor="#ffffff"
         />
	<Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_OK"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/enter_content"
        android:onClick="submitContent" />
	<TextView
        android:id="@+id/or_message2"
        android:text="@string/or_message"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:layout_below="@id/submit_button"
        android:layout_centerHorizontal="true"
        android:ems="10" />
	<TextView
        android:id="@+id/type_message"
        android:text="@string/type_message"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/or_message2"
        android:textColor="#ffffff"
        android:layout_centerHorizontal="true"
        android:ems="10" />
	<ImageButton
        android:contentDescription="@drawable/mic"
        android:background="@drawable/mic"
        android:id="@+id/btSpeak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="speak"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/type_message"
        android:src="@drawable/mic" 
        tools:context=".HomescreenActivity" />
	<ImageView
	    android:id="@+id/curly_bottom"
	    android:src="@drawable/curly"
	    android:layout_width="wrap_content"
        android:layout_below="@id/btSpeak"
        android:layout_centerHorizontal="true"
	    android:layout_height="wrap_content">
    </ImageView>
</RelativeLayout>