<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <!-- Here you put the rest of your current view-->

	<RelativeLayout
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomescreenActivity" >
	<ImageView
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
		android:layout_centerInParent="true"
		android:scaleType="centerCrop"
	    android:src="@drawable/city"
	></ImageView>	    
    <ImageView
        android:id="@+id/logo"
        android:background="#80000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" >

    </ImageView>
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/logo"
        android:contentDescription="@drawable/connect"
        android:layout_centerHorizontal="true"
        android:src="@drawable/connect" >
    </ImageView>
	<TextView
        android:id="@+id/connect_message"
        android:text="@string/connect_message"
        android:textSize="25sp"
		style="@style/AudioFileInfoOverlayText"
        android:textColor="#ffffff"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView1"
        android:layout_centerHorizontal="true"
        android:background="#80000000"
        android:ems="10" />
	<View
        android:id="@+id/view2"
        android:layout_width="fill_parent"
        android:layout_below="@id/connect_message"
        android:layout_height="30dp">
    </View>
    <EditText
        android:id="@+id/enter_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_below="@id/view2"
        android:hint="@string/code_hint"
		style="@style/AudioFileInfoOverlayText"
        android:textColorHint="#000000"/>

     <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_OK"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/enter_code"
        android:onClick="sendCode" />

 	<TextView
        android:id="@+id/or_message"
        android:text="@string/or_message"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:textSize="25sp"
		style="@style/AudioFileInfoOverlayText"
        android:textColor="#ffffff"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#80000000"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ok_button"
        android:ems="10" />
   <TextView
        android:id="@+id/scan_qr_message"
        android:text="@string/scan_qr_message"
        android:background="#80000000"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:textSize="25sp"
		style="@style/AudioFileInfoOverlayText"
        android:textColor="#ffffff"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/or_message"
        android:ems="10" />
	<View
        android:id="@+id/view3"
        android:layout_width="fill_parent"
        android:layout_below="@id/scan_qr_message"
        android:layout_height="30dp">
    </View>	
    <View
        android:id="@+id/view4"
        android:layout_width="fill_parent"
        android:layout_below="@id/view3"
        android:layout_height="30dp">
    </View>
   <ImageView
        android:id="@+id/imageView2"
        android:clickable="true"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@drawable/camera"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/view4"
        android:onClick="scanQR"
        android:src="@drawable/camera" >
    </ImageView>
   <ImageView
	    android:id="@+id/curly_bottom"
	    android:src="@drawable/curly"
	    android:layout_width="wrap_content"
        android:layout_below="@id/imageView2"
        android:layout_centerHorizontal="true"
	    android:layout_height="wrap_content">
    </ImageView>
   
</RelativeLayout>
</ScrollView>